Closed
Bug 511883
Opened 15 years ago
Closed 15 years ago
window.print() doesn't work from inside a frame
Categories
(Core :: Layout, defect, P1)
Tracking
()
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
status1.9.2 | --- | beta1-fixed |
People
(Reporter: martijn.martijn, Assigned: smaug)
References
()
Details
(Keywords: regression, testcase)
Attachments
(2 files)
283 bytes,
text/html
|
Details | |
1.74 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
See testcase, a print dialog should appear, this regressed when bug 352093 landed.
Flags: blocking1.9.2?
Reporter | ||
Comment 1•15 years ago
|
||
This was mentioned at http://forums.mozillazine.org/viewtopic.php?f=23&t=1434425&p=7307595#p7307595
Updated•15 years ago
|
Flags: blocking1.9.2? → blocking1.9.2+
Priority: -- → P2
Comment 3•15 years ago
|
||
Regression window:
FAIL: http://hg.mozilla.org/mozilla-central/rev/026403392281 (30539)
PASS: http://hg.mozilla.org/mozilla-central/rev/b01f80d5166a (30538)
So printing a frame somehow depends on that frame having a widget? Seems like it shouldn't...
This sucks actually. I tried to avoid supporting print preview of an iframe because I thought only chrome could do that, and although I guess that's still true, I didn't know content could print iframes. The problem is that the print engine expects a widget at the root and I don't know how hard it would be to fix that for printing --- I know it looked hard for print preview.
Olli, would you possibly be able to look at this? I'm suspect your cloning patch fixes it but I guess we can't backport that to 1.9.2 :-(.
Assignee | ||
Comment 7•15 years ago
|
||
We use mParentWidget only when creating print preview.
Attachment #399289 -
Flags: review?(roc)
Comment on attachment 399289 [details] [diff] [review]
patch
Ahh, great!
Attachment #399289 -
Flags: review?(roc) → review+
Martijn, do you know if it's possible to write a mochitest here? You can probably set a pref to disable the dialog box, but I guess the test output still goes to the default printer, and that would be bad...
Updated•15 years ago
|
Flags: in-testsuite?
Flags: in-litmus?
Assignee | ||
Comment 10•15 years ago
|
||
Assignee | ||
Updated•15 years ago
|
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Priority: P2 → P1
Assignee | ||
Comment 11•15 years ago
|
||
status1.9.2:
--- → beta1-fixed
Priority: P1 → P2
Assignee | ||
Updated•15 years ago
|
Priority: P2 → P1
You need to log in
before you can comment on or make changes to this bug.
Description
•