 Bug 511883 -  window.print() doesn't work from inside a frame, r=roc